# Backend-takehome-problem

./: README.md  output.csv  output2.csv  output4.csv  output5.csv  output6.csv  output8.csv  pyproject.toml  test.pypirc
bing/: get_papers_list.py  pubmed_fetcher.py
tests/: test_pubmed_fetcher.py
