[project]
name = "bing"
version = "0.1.0"
description = ""
authors = [
    {name = "Katika Sai Kumar Reddy", email = "umasai042@gmail.com.com"}
]
readme = "README.md"
requires-python = ">=3.11"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.25.1"
pandas = "1.5.3"
numpy = "1.23.2"

[tool.poetry]
packages = [
    { include = "bing" }
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
get-papers-list = "bing.get_papers_list:main"